<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="questionSelection">Question Selection</string>
    <string name="email">E-mail</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="app_id">609901405730215</string>
    <string name="account_overview">Account Overview</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="questionEdit">QuestionEdit</string>
    <string name="discard">Discard</string>
    <string name="loadMore">Load More</string>
    <string name="save">Save</string>
    <string name="choose_new_question">Choose New Question</string>
    <string name="quiz_me">Quiz Me!</string>
    <string name="skip">Skip</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="connect_facebook">Connect with Facebook!</string>
    <string name="FLAT_GREEN">#27ae60</string>
    <string name="navDrawer">Quizter</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="welcome_message">WELCOME TO</string>
    <string name="connect_description">We use Facebook to connect you and your friends through Quizter!</string>
    <string name="welcome_bold_title">Quizter</string>
    <string name="welcome_information">NOTHING WILL BE POSTED WITHOUT YOUR PERMISSION</string>

</resources>
