<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/question"
            android:textColor="#7f8c8d"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionEditField"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:maxLength="65"
            android:layout_marginRight="15dp"
            android:lines="1"
            android:inputType="textEmailAddress"/>
        <TextView
            android:id="@+id/questionExample"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Example: What is my favorite color?"
            android:textStyle="italic"
            android:textColor="#7f8c8d"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/answerLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/answer"
            android:textColor="#7f8c8d"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerEditField"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLength="30"
            android:lines="1"
            android:inputType="textEmailAddress"/>
        <TextView
            android:id="@+id/answerExample"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Example: Red"
            android:textStyle="italic"
            android:textColor="#7f8c8d"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/orLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="-- OR --"
            android:textColor="#7f8c8d"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Choose from exisiting list"
            android:id="@+id/chooseNewQuestion"
            android:textColor="@color/quizter_theme_background"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal|bottom"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/quizter_theme_color">
        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="@color/quizter_theme_background"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/questionEditDiscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/discard"
            android:textColor="@color/quizter_theme_background"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/questionEditSubmit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/submit"
            android:layout_alignParentBottom="true"
            android:textColor="@color/quizter_theme_background"
            android:layout_toRightOf="@id/ViewColorPickerHelper"/>
    </RelativeLayout>


</RelativeLayout>